@@ -1,3 +1,7 @@
+2005-03-23  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
+
+	* gaphor/diagram/association.py: reverted to version 1.61.
+
 2005-01-24  wrobell <wrobell@pld-linux.org>
 	* gaphor/diagram/association.py: use one rotation function (update_dir
 	method and xs rotation refactorized), show direction arrow on proper
